2015-02-25  Corinna Vinschen  <corinna@vinschen.de>

	* mkgroup.c (MAX_SID_LEN): Remove.  Instead, use SECURITY_MAX_SID_SIZE
	throughout.
	(enum_unix_groups): Introduce numeric_psid and rearrange code to avoid
	potential heap corruption.
	* mkpasswd.c: Ditto.

2015-02-17  Ken Brown  <kbrown@cornell.edu>

	* dump_setup.cc (check_package_files): Accommodate postinstall
	files in any directory whose name contains "/postinstall/", not
	just /etc/postinstall.

2015-02-03  Corinna Vinschen  <corinna@vinschen.de>

	* regtool.cc (longopts): Add --force option.
	(opts): Add -f option.
	(restore_flags): New variable.
	(usage): Clarify working of save action.  Add restore action.  Add
	description for -f/--force option.
	(set_privilege): Drop function.  The Cygwin DLL is doing that anyway.
	(cmd_save): Drop call to set_privilege.
	(cmd_restore): New function.
	(main): Handle -f/--force option.

2014-12-15  Corinna Vinschen  <corinna@vinschen.de>

	* setfacl.c (action_t): Add DeleteDef value.
	(delacl): Take new parameter to differe between DeleteAll and DeleteDef.
	Extend conditional to handle DefaultDef.  Change comment accordingly.
	(setfacl): Call delacl in DefaultDef case as well.
	(usage): Add and describe -k option.  Add -k to require options.
	(longopts): Add --remove-default option.
	(opts): Add -k option.
	(main): Handle -k option.

2014-12-05  Václav Zeman  <vhaisman@gmail.com>

	* tzmap-from-unicode.org: Create tzmap as const.
	* tzmap.h: Regenerate.

2014-12-05  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in: Add rules to create and depend on tzmap.h.
	* tzmap-from-unicode.org: New script to create tzmap.h.
	* tzmap.h: New auto-generated file.
	* tzset.c: Drop tzmap from here and include tzmap.h instead.  Drop
	Windows 2000 considerations.

2014-11-28  Corinna Vinschen  <corinna@vinschen.de>

	* mkgroup.c (main): Call enum_local_groups with offset 0x30000 for local
	machine, too.

2014-11-27  Corinna Vinschen  <corinna@vinschen.de>
